<resources>
    <string name="app_name">Validasi Login</string>
    <string name="password1">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="alamat_tinggal">Alamat Tinggal</string>
    <string name="simpan">Simpan</string>
    <string name="proyek_2">PROYEK 2</string>
    <string name="password">Password</string>
</resources>