<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:fitsSystemWindows="false"
        android:src="@drawable/logo_vsga" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="14sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:textColor="#000"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:textColor="#000" />

    <Button
        android:id="@+id/action_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="16sp" />

    <Button
        android:id="@+id/action_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:background="@color/design_default_color_primary"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:textSize="16sp"/>

</LinearLayout>